# zlai

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  models_config.yml  pyproject.toml  requirements.txt  run.sh  setup.py
.github/: toml_publish.yml
.github/workflows/: publish.yml
test/: test_quick_star.py
test/agent/: test_address.py  test_agent_memory.py  test_agent_plan.py  test_charts.py  test_chat.py  test_csv.py  test_fund.py  test_knowledge.py  test_long_write.py  test_parse.py  test_sina.py  test_sqlite.py  test_stock.py  test_task_switch.py  test_tools.py  test_weather.py
test/agent/task/: test_task.py
test/documents/: test_elasticsearch.py  test_load.py  test_markdown.py  test_save.py
test/embedding/: test_ali.py  test_local_api.py  test_mixin.py  test_pretrained.py  test_zhipu.py
test/issues/: test_01_tools_agent.py
test/llms/: ali.py  atom.py  baichuan.py  deepseek.py  silicon_flow.py  test_baidu.py  test_doubao.py  test_hunyuan.py  test_local.py  test_moonshot.py  test_openai.py  test_spark.py  test_step_fun.py  test_yi.py  test_zhipu.py  zhipu.py
test/models/: test_api.py  test_function_call.py  test_image.py  test_model_config.py  test_models.py  test_models_list.py  test_type.py
test/models/cache/: test_cache.py
test/models/diffusers/: images_edits.py
test/models/embedding/: test_emb.py
test/models/load/: test_load_model.py  test_load_ymal.py
test/models/speech/: test_chat_audio.py  test_speech.py
test/models/tools/: test_tool_call.py
test/parse/: test_parse.py
test/prompt/: graph.py  graph_rag.py  message.py  prompt.py
test/streamlit/: message.py
test/temp/: temp.py  test_cache.py
test/tools/: charts.py  image.py  test_charts.py  test_fund.py  test_tools.py
test/tools/macro/: test_load_data.py
test/tools/report/: test_news.py  test_report.py  test_stock_performance.py
test/types/: test_chunk.py  test_image_message.py  test_instance.py
test/types/generate_config/: test_deepseek.py
test/types/message/: test_cite.py  test_completion.py  test_image_message.py  test_instance.py
test/user/: test_quick_star.py
test/utils/: test_deprecated.py  test_import.py  test_version.py
zlai/: __init__.py
zlai/agent/: __init__.py  address.py  agent.py  base.py  chat.py  config.py  csv.py  dataframe.py  dynamic.py  fund.py  knowledge.py  parse.py  policy.py  pyecharts.py  shell.py  sql.py  sqlite.py  task_description.py  tasks.py  tools.py  try_times.py  weather.py
zlai/agent/echarts/: __init__.py  charts.py
zlai/agent/graph/: graph.py
zlai/agent/long_write/: __init__.py  long_write.py
zlai/agent/pre_version/: temp.py
zlai/agent/prompt/: __init__.py  address.py  auto_web.py  bing.py  chat.py  csv.py  fund.py  graph.py  knowledge.py  long_write.py  pyecharts.py  shell.py  sqlite.py  tasks.py  weather.py
zlai/agent/schema/: __init__.py  base.py  info.py  task.py
zlai/agent/tools/: __init__.py  register.py  schema.py  tools.py  tools_agent.py
zlai/agent/v_1/: fund.py
zlai/agent/web/: __init__.py  auto_web_selenium.py  auto_web_unstructured.py  bing.py  links.py  web_search.py
zlai/database/: sql.py
zlai/dispatch/: dispatch.py
zlai/documents/: load.py  load_md.py  pdf.py  read.py  save.py
zlai/elasticsearch/: __init__.py  config.py  document.py  elasticsearch.py
zlai/embedding/: __init__.py  ali.py  emb_utils.py  embedding.py  embedding_config.py  openai.py  pretrained.py  schema.py  zhipu.py
zlai/embedding/embedding_config/: __init__.py  ali.py  base.py  openai.py  zhipu.py
zlai/graph/: __init__.py  base.py  graph.py  tree.py
zlai/graph/charts/: __init__.py  graph.py  tree.py
zlai/llms/: __init__.py  ali.py  atom.py  baichuan.py  baidu.py  base.py  deepseek.py  doubao.py  generate.py  hunyuan.py  local.py  moonshot.py  openai.py  silicon_flow.py  spark.py  step_fun.py  yi.py  zhipu.py
zlai/llms/generate_config/: __init__.py  ali.py  atom.py  baichuan.py  baidu.py  base.py  deepseek.py  doubao.py  hunyuan.py  local.py  moonshot.py  openai.py  silicon_flow.py  spark.py  yi.py  zhipu.py
zlai/models/: __init__.py  app.py
zlai/models/apps/: app.py  completion.py
zlai/models/cahce/: cache.py
zlai/models/completion/: __init__.py  completion.py  completion_mapping.py  load.py  parse_function_call.py
zlai/models/config/: config.py  models.py
zlai/models/diffusers/: __init__.py  generate_mapping.py  generation.py  load_model.py
zlai/models/embedding/: __init__.py  encode.py  load_model.py
zlai/models/lifspan/: __init__.py  lifspan.py
zlai/models/load/: __init__.py  cache.py  completion.py  load.py
zlai/models/route/: utils.py
zlai/models/routes/: __init__.py  chat_completions.py  gpu_memory_cache.py  index.py  models_list.py
zlai/models/tts/: __init__.py  generate_mapping.py  generation.py  load_model.py
zlai/models/types/: __init__.py  chat_completion_chunk.py  (+2 more)
zlai/parse/: __init__.py  amount.py  sparse.py
zlai/prompt/: __init__.py  base.py  graph.py  sql.py  summary.py  template.py  tools.py
zlai/retrievers/: __init__.py  base.py  clean.py  rag.py  retrievers.py  spliter.py
zlai/schema/: __init__.py  content.py  document.py  messages.py  models.py  output.py  request.py  response.py  schema.py  url.py
zlai/streamlit/: __init__.py  streamlit.py  web.py
zlai/tools/: __init__.py  utils.py
zlai/types/: __init__.py  chat_completion.py  chat_completion_chunk.py  completion_usage.py  function_call.py  messages.py
zlai/utils/: __init__.py  config.py  deprecation.py  image.py  mixin.py  utils.py
zlai/vector_db/: core.py
zlai/warpper/: __init__.py  sparse.py
(+273 files in other folders)
